--- a/front-end/src/app/users/user/user.component.scss
+++ b/front-end/src/app/users/user/user.component.scss
@@ -12,3 +12,26 @@ i {
     width: 250px;
     text-align: center;
 }
+
+.user{
+    max-height: 500px;
+    max-width: 250px;
+}
+
+.frame{
+    height: 120px;//à revoir
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
+}
