--- a/front-end/src/app/users/user-list/user-list.component.scss
+++ b/front-end/src/app/users/user-list/user-list.component.scss
@@ -1,5 +1,22 @@
 @import '../../../styles/card.scss';
+
 .user-list {
-  //display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  //float: right;
 }
-  
+
+.user {
+  padding: 0.5em;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.button-user:hover {
+  cursor: pointer;
+}
+
+.delete {
+  align-self: flex-end;
+}
