--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.html
@@ -6,29 +6,30 @@
         <h1>Nom du quiz : {{quiz.name}}</h1>
         <h2>Thème : {{quiz.theme}}</h2>
         <div *ngIf="image.url" class="frame"><img class = "thumbnail" [src]="displayImage()" alt="quiz image"></div>
-        <button id = "editQuizName" class="button" (click)="initQuizForm()">Modifier</button>
+        <button class="button-card" id = "editQuizName" (click)="initQuizForm()">Modifier</button>
     </div>
     <ng-template #elseBlock>
     <div>
         <form class="quiz-form" [formGroup]="quizForm">
             <h1>Nom du quiz : <input class="input-custom" type="text" id="name" [formControlName]="'name'"></h1>        
             <label for="theme">
-                Thème :
-                <br>
-                <select name = "Thème" id = "theme" [formControlName] = "'theme'"> 
-                  <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
-                    {{current_theme}}
-                  </option>
-                </select>
-                <button (click)="addNewTheme()">Autres... </button>
-                  <div *ngIf="showThemeForm"><app-add-thems-form (themeAdded) = "resetAppearing()"></app-add-thems-form></div>
+                <h2>Thème :
+                  <select name = "Thème" id = "theme" [formControlName] = "'theme'">
+                    <option *ngFor = "let current_theme of THEME_LIST" [value] = "current_theme">
+                      {{current_theme}}
+                    </option>
+                  </select>
+                  <button class="button-card" type="button" (click)="swapShowTheme()">{{getThemeBtnTxt()}}</button>
+                </h2>
+                <div *ngIf="showThemeForm"><theme-form (themeAdded)="swapShowTheme()"></theme-form></div>
             </label>
             <div *ngIf="image.url" class="frame"><img class = "thumbnail" [src]="displayImage()" alt="quiz image"></div>
-            <input type="file" accept="image/*" (change)="onChangeFile($event)" id = "image">
+            <div class="label"><label for="image64" class="button-card">Cet appareil</label></div>
+            <input type="file" class="hidden" id="image64" (change)="onChangeFile($event)" accept="image/*">
             <br>
-            <button type="submit" id = "confirmEdit" class="button" (click)="updateQuiz()">Valider</button>
+            <button class="button-card" type="submit" id = "confirmEdit" (click)="updateQuiz()">Valider</button>
             <!--<button type="submit" id = "confirmEdit" class="button">Valider</button>-->
-            <button type="reset" id = "cancel" class="button" (click)="reset()">Annuler</button>
+            <button class="button-card" type="reset" id = "cancel" (click)="reset()">Annuler</button>
         </form>
     </div>
     </ng-template>
