--- a/front-end/src/app/quizzes/answer-form/answer-form.component.scss
+++ b/front-end/src/app/quizzes/answer-form/answer-form.component.scss
@@ -1,1 +1,39 @@
 @import '../../../styles/card.scss';
+
+.hidden {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.label {
+    //margin-top: 0.5em;
+    margin-top: 0.3em;
+}
+
+.image {
+    float: right;
+    //width: 30%;//50%
+}
+
+.frame{
+    height: 120px;//à revoir
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: dashed;
+    border-color:  rgb(243, 58, 144);
+}
+
+.thumbnail {
+    object-fit: cover;
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;//80px;
+    width: 100%;//100px
+}
+
+.buttons-bottom {
+    margin-top: 1em;
+}
