--- a/front-end/src/app/quizzes/questions/questions.component.html
+++ b/front-end/src/app/quizzes/questions/questions.component.html
@@ -1,17 +1,25 @@
 
 <div class="card">
-    <!--Question n°{{question.id}} :-->
     <div class = "errorMessage" *ngIf = "questionInvalid()">
         {{errorMessage}}
     </div>
-    {{question.label}} 
-    <div *ngIf="image.url"class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="question image"></div>
-    <button id="editLabelQuestion" class="button" (click)="editLabelQuestion()"><i class="fas fa-edit"></i></button>
-    <div *ngIf="showFormQuestion ">
+    <div *ngIf="!showFormQuestion">
+        {{question.label}} 
+        <div *ngIf="image.url"class="frame"><img class="thumbnail" [src]="getImgSrc()" alt="question image"></div>
+        <button id="editLabelQuestion" class="button" (click)="editLabelQuestion()"><i class="fas fa-edit"></i></button>
+    </div>
+    <div *ngIf="showFormQuestion">
         <form [formGroup]="questionForm">
-         <input type="text" [formControlName]="'label'">
-         <button id = "submitQuestion" class="button-card" (click)="submitQuestionLabel()">Valider</button>
-         <button id = "cancel" class="button-card" (click)="cancelQuestionLabel()">Annuler</button>
+            <input type="text" [formControlName]="'label'"><br>
+            Charger une image depuis
+            <div class="frame image" *ngIf="imagePreviewUp || image.url">
+                <img class="thumbnail" [src]="getImgSrcUp()" alt="question image">
+            </div>
+            <div class="label"><label for="image64Up" class="button-card">Cet appareil</label></div>
+            <input type="file" class="hidden" id="image64Up" (change)="onChangeFile($event)" accept="image/*">
+            <br>
+            <button id = "submitQuestion" class="button-card" (click)="submitQuestionLabel()">Valider</button>
+            <button id = "cancel" type="button" class="button-card" (click)="cancelQuestionLabel()">Annuler</button>
         </form>
     </div>
     
@@ -19,10 +27,10 @@
     <br>
     Réponses : 
     <div class="question" *ngFor="let answer of question.answers">
-        <div *ngIf="answer">{{answer.value}}  -> {{answer.isCorrect}} 
+        <div *ngIf="answer">{{answer.value}} -> {{answer.isCorrect}}
             <button id = "editAnswer" class="button" (click)="editAnswer(answer)"><i class="fas fa-edit"></i></button>
             <div *ngIf="show && answer==answerSelected">
-                <app-answer-form [quiz] = "quiz" [question]="question" [answerInit]= "answerSelected" (answerAdded)="reset($event)"></app-answer-form>
+                <app-answer-form [quiz] = "quiz" [question]="question" [answer]= "answerSelected" (answerAdded)="reset($event)"></app-answer-form>
             </div>
             <button id = "supprAnswer" class="button" (click)="supprAnswer(answer)"><i class="fas fa-trash"></i></button>
         </div>
