--- a/front-end/src/app/quizzes/questions/questions.component.scss
+++ b/front-end/src/app/quizzes/questions/questions.component.scss
@@ -26,6 +26,22 @@ h2 {
     max-width: 250px;
 }
 
+.hidden {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.label {
+    //margin-top: 0.5em;
+    margin-top: 0.3em;
+}
+
+.image {
+    float: right;
+    //width: 30%;//50%
+}
+
 .frame{
     height: 120px;//à revoir
     width: 150px;
@@ -42,5 +58,9 @@ h2 {
     margin-right: auto;
     height: 100%;//80px;
     width: 100%;//100px
+}
+
+.buttons-bottom {
+    margin-top: 1em;
 }
 
