Ajout de la page galerie (/galery) + ajustements SCSS

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/images.scss';
 
 /*thumbnail{
     display: block; 
@@ -16,24 +17,6 @@
 .label {
     //margin-top: 0.5em;
     margin-top: 0.3em;
-}
-
-.frame{
-    height: 120px;//à revoir
-    width: 150px;
-    //margin-left: auto;
-    //margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
 }
 
 .buttons-bottom {
