--- a/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
+++ b/front-end/src/app/quizzes/quiz-form/quiz-form.component.html
@@ -20,7 +20,8 @@
     </div>
     <div class="label"><label for="modal-imageWeb" class="button-card">Internet</label></div>
     <div class="label"><label for="image64" class="button-card">Cet appareil</label></div>
-    <div class="label"><label for="modal-imageDB" class="button-card">Banque d'images</label></div>
+
+    <div class="label" routerLink= "/galery"><label for="modal-imageDB" class="button-card">Banque d'images</label></div>
 
 
     <!-- modal -->
