--- a/front-end/src/app/quizzes/quiz-form/quiz-form.component.scss
+++ b/front-end/src/app/quizzes/quiz-form/quiz-form.component.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/card.scss';
 @import "../../../styles/variables";
+@import '../../../styles/images.scss';
 
 .quiz-form{
     max-width: 300px;
@@ -19,24 +20,6 @@
 .image {
     float: right;
     //width: 30%;//50%
-}
-
-.frame{
-    height: 120px;//à revoir
-    width: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
 }
 
 .buttons-bottom {
