--- a/front-end/src/app/users/user/user.component.scss
+++ b/front-end/src/app/users/user/user.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/images.scss';
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -16,22 +17,4 @@ i {
 .user{
     max-height: 500px;
     max-width: 250px;
-}
-
-.frame{
-    height: 120px;//à revoir
-    width: 150px;
-    margin-left: auto;
-    margin-right: auto;
-    border-style: dashed;
-    border-color:  rgb(243, 58, 144);
-}
-
-.thumbnail {
-    object-fit: cover;
-    display: block; 
-    margin-left: auto;
-    margin-right: auto;
-    height: 100%;//80px;
-    width: 100%;//100px
 }
