--- a/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.html
+++ b/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.html
@@ -1,5 +1,5 @@
 <div class="quiz-list">
-    <button class="card button-card" *ngFor="let quiz of quizList" routerLink= "/quiz-sequence/{{quiz.id}}">
+    <button id="bouton" class="card button-card fixed-container" *ngFor="let quiz of quizList" routerLink= "/quiz-sequence/{{quiz.id}}">
         <app-quiz [quiz]="quiz"></app-quiz>
     </button>
 </div>
