--- a/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.scss
+++ b/front-end/src/app/quizzes/quiz-list-customers/quiz-list-customers.component.scss
@@ -1,6 +1,12 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/layout.scss';
 
 .quiz-list {
   display: flex;
   flex-wrap: wrap;
+}
+
+#bouton {
+  align-items: center;
+  justify-content: center;
 }
