--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.html
@@ -5,10 +5,10 @@
 <!-- button: "Nouveau quiz" to triger it-->
 <app-quiz-form class="quiz-form"></app-quiz-form>
 <div class="quiz-list">
-    <div class="card quiz" *ngFor="let quiz of quizList">
+    <div class="card quiz fixed-container" *ngFor="let quiz of quizList">
         <button class="button-card delete" (click)="deleteQuiz(quiz)">
             <i class="fas fa-times"></i></button>
-        <button class="button-card quiz" routerLink= "/edit-quiz/{{quiz.id}}">
+        <button class="card button-card quiz" routerLink= "/edit-quiz/{{quiz.id}}">
             <app-quiz [quiz]="quiz" (quizDeleted) = "deleteQuiz($event)"></app-quiz>
         </button>
     </div>
