--- a/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.scss
+++ b/front-end/src/app/quizzes/quiz-list-staff/quiz-list-staff.component.scss
@@ -1,8 +1,5 @@
 @import '../../../styles/card.scss';
-
-.quiz-form {
-  //float: left;
-}
+@import '../../../styles/layout.scss';
 
 .quiz-list {
   display: flex;
@@ -11,10 +8,14 @@
 }
 
 .quiz {
-  padding: 0.5em;
   display: flex;
   flex-direction: column;
+
+  padding: 0.5em;
   text-align: center;
+
+  align-items: center;
+  justify-content: center;
 }
 
 .button-quiz:hover {
