--- a/front-end/src/app/quizzes/quiz/quiz.component.scss
+++ b/front-end/src/app/quizzes/quiz/quiz.component.scss
@@ -1,10 +1,11 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+@import '../../../styles/layout.scss';
 
-h1 {
+.title {
     font-family: Arial, Helvetica, sans-serif;
   }
-h2 {
+.subtitle {
     color: rgb(202, 3, 202);
 }
 .date{
@@ -16,7 +17,7 @@ i {
     text-align: center;
 }
 
-.quiz{
+/* .quiz{
     max-height: 500px;
     max-width: 250px;
-}
+} */
