--- a/front-end/src/app/start/users-list/users-list.component.scss
+++ b/front-end/src/app/start/users-list/users-list.component.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/card.scss';
+@import '../../../styles/layout.scss';
 
 .user-list {
   display: flex;
@@ -12,6 +13,8 @@
   flex-direction: column;
   text-align: center;
 
+  align-items: center;
+  justify-content: center;
 }
 
 .button-user:hover {
@@ -21,4 +24,8 @@
 
 .delete {
   align-self: flex-end;
+}
+
+.title {
+  text-align: center;
 }
