fixed big img css

--- a/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
+++ b/front-end/src/app/quizzes/edit-quiz/edit-quiz.component.scss
@@ -1,12 +1,13 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
 
-/*thumbnail{
-    display: block; 
-    margin-left: auto; 
-    margin-right: auto; 
-    width:80%;
-}*/
+
+.frame{
+    height: 15%;
+    min-height: 300px;
+    width: 20%;
+    min-width: 470px;
+}
 
 .hidden {
     opacity: 0;
