--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="buttons-duo">
-    <button class="button-card button-big" routerLink= "/staff">Personnel</button>
+    <button class="button-card button-big" routerLink= "/passeword">Personnel</button>
     <br>
     <button class="button-card button-big" routerLink= "/user-selection">Accueilli</button>
 </div>
