--- a/front-end/src/app/start/passeword/passeword.component.html
+++ b/front-end/src/app/start/passeword/passeword.component.html
@@ -1,3 +1,6 @@
+<button class="button-card" routerLink= "/home">Retour</button>
+<button class="button-card" routerLink= "/home">Home</button>
+<br>
 <form [formGroup]="loginForm">
     <input [formControlName]="'password'" type="password" placeholder="Enter Password">
     <button (click) = "loginUser()">Identifier</button>
