--- a/front-end/src/app/start/home/home.component.html
+++ b/front-end/src/app/start/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="buttons-duo">
+<div class="buttons-duo center">
     <button class="button-card button-big" routerLink= "/passeword">Personnel</button>
     <br>
     <button class="button-card button-big" routerLink= "/user-selection">Accueilli</button>
