--- a/front-end/src/styles/layout.scss
+++ b/front-end/src/styles/layout.scss
@@ -9,3 +9,30 @@
     white-space: nowrap;
     overflow: hidden;
 }
+
+.take-all-space{
+    height: 90%;
+    width: 100%;
+}
+
+.vertical-center{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.center{
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.horizontal-center{
+    margin-left: auto;
+    margin-right: auto;
+}
+
