--- a/front-end/src/app/quizzes/question-form/question-form.component.html
+++ b/front-end/src/app/quizzes/question-form/question-form.component.html
@@ -13,5 +13,6 @@
 	<input type="file" class="hidden" id="image64" (change)="onChangeFile($event)" accept="image/*">
 	<br>
 	<button id="createQuestion" class="button-card" (click)="saveQuestion()">Créer</button>
+	<button id="reset" class="button-card" (click) = "reset()">Annuler</button>
 	</form>
 </div>
