--- a/front-end/src/app/quizzes/question-form/question-form.component.scss
+++ b/front-end/src/app/quizzes/question-form/question-form.component.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+@import '../../../styles/layout.scss';
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
