--- a/front-end/src/app/quizzes/question-list/question-list.component.html
+++ b/front-end/src/app/quizzes/question-list/question-list.component.html
@@ -6,7 +6,7 @@
 <div class="question-list"> 
 <div class="question" *ngFor="let question of quiz.questions">
   <!--Sauvegarde : <app-edit-question [quiz]  = "quiz" [question] = "question" (questionDeleted) = "deleteQuestion($event)"></app-edit-question>-->
-  <app-questions [quiz]  = "quiz" [question] = "question"></app-questions>
+  <app-question [quiz]  = "quiz" [question] = "question"></app-question>
 
 </div>
 </div>
