--- a/front-end/src/app/users/user-selection-list/user-selection-list.component.html
+++ b/front-end/src/app/users/user-selection-list/user-selection-list.component.html
@@ -1,7 +1,7 @@
 <button class="button-card" routerLink= "/home">Retour</button>
 <br>
 
-<h1 class="title"> Sélectionnez votre profil accueilli </h1>
+<h1 class="title"> Sélectionnez votre profil </h1>
 
 <div class="user-list">
     <div class="card user fixed-container" *ngFor="let user of userList">
