--- a/front-end/src/app/quizzes/edit-question/edit-question.component.scss
+++ b/front-end/src/app/quizzes/edit-question/edit-question.component.scss
@@ -1,5 +1,6 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/images.scss';
+@import '../../../styles/layout.scss';
 
 h1 {
     font-family: Arial, Helvetica, sans-serif;
@@ -14,6 +15,9 @@ h2 {
 .errorMessage{
     color: rgb(238, 12, 12);
     font-weight: bold;;
+}
+#createAnswer {
+    display: inline-block;
 }
 
 /*i {
@@ -34,13 +38,14 @@ h2 {
 }
 
 .label {
-    //margin-top: 0.5em;
-    margin-top: 0.3em;
+    margin-top: 1em;
 }
 
+#chargerImage {
+    border-radius: 1em;
+}
 .image {
-    float: right;
-    //width: 30%;//50%
+    margin-top: 1em;
 }
 
 .buttons-bottom {
