--- a/front-end/src/app/quizzes/edit-question/edit-question.component.html
+++ b/front-end/src/app/quizzes/edit-question/edit-question.component.html
@@ -1,4 +1,4 @@
-<button class="button-card" (click)="goBack()"> Retour </button>(mettre popup quitter sans enr...)
+<button class="button-card" (click)="goBack();resetAll()"> Retour </button>(mettre popup quitter sans enr...)
 <div class = "horizontal-center" *ngIf="quiz && question && (image||!question.imageId)">
     <h1>Quiz : {{quiz.name}}</h1>
     
@@ -10,40 +10,42 @@
         <input type="text" size = "{{question.label.length}}" [formControlName]="'label'">
         <button id = "cancel" type="button" (click)="cancelQuestionLabel()"><i class="fas fa-undo-alt"></i></button>
     </form>
-    
-    <div *ngIf = "image">
-        <div class="frame image" *ngIf="imagePreviewUp || image.url">
-            <img class="thumbnail" [src]="getImgSrcUp()" alt="question image">
-        </div>
+    <div class = "imageAndText">
         <div class="label">
             <label for="image64Up" class="button-card" id = "chargerImage">Charger une image depuis cet appareil</label>
             <button id = "cancel" type="button" (click)="cancelImageLoading()"><i class="fas fa-undo-alt"></i></button>
+        </div>
+        <div class="frame image" *ngIf="imagePreviewUp || (image && image.url)">
+            <img class="thumbnail" [src]="getImgSrcUp()" alt="question image">
         </div>
         <input type="file" class="hidden" id="image64Up" (change)="onChangeFile($event)" accept="image/*">
     </div>
     
     <h2>Réponses :</h2>
     
-    <button id = "createAnswer" class="button-card" (click)="createAnswer()"> <i class="fas fa-plus-circle"></i> Ajouter une réponse </button>
+    <button id = "createAnswer" class="button-card" (click)="switchShowForm(true)"> <i class="fas fa-plus-circle"></i> Ajouter une réponse </button>
     <!--Peut-être à mettre dans un modal-->
-    <div *ngIf="show && !answerSelected">
-        <app-answer-form [quiz] = "quiz" [question]="question" (answerAdded)="reset($event)"></app-answer-form>
+    <div *ngIf="showForm">
+        <app-answer-form [quiz] = "quiz" [question]="question" (answerAdded)="switchShowForm($event)"></app-answer-form>
     </div>
     <!---->
-    <div class="question" *ngFor="let answer of question.answers">
-        <div *ngIf="answer">
+    <div class="answer-list">
+        <div *ngFor="let answer of question.answers">
+                <app-edit-answer [answer] = "answer" [question] = "question" [quiz] = "quiz"></app-edit-answer>
+                <!--
             {{answer.value}} -> {{answer.isCorrect}}
             <button id = "editAnswer" class="button" (click)="editAnswer(answer)"><i class="fas fa-edit"></i></button>
             <div *ngIf="show && answer==answerSelected">
                 <app-answer-form [quiz] = "quiz" [question]="question" [answer]= "answerSelected" (answerAdded)="reset($event)"></app-answer-form>
             </div>
             <button id = "supprAnswer" class="button" (click)="supprAnswer(answer)"><i class="fas fa-trash"></i></button>
+        -->
         </div>
     </div>
     
     <!--<button id = "deleteQuestion" class="button-card" (click)="deleteQuestion()"> Supprimer la question</button>-->
 
-    <button id = "submitQuestion" class="button-card" (click)="submitQuestionLabel()">Enregistrer</button>
+    <button id = "submitQuestion" class="button-card" (click)="submitAll()">Tout enregistrer (Ne pas cliquer dessus!^^)</button>
     <button id = "cancelAll" class="button-card" (click)="resetAll()">Tout annuler</button>
 
 </div>
