--- a/front-end/src/app/quizzes/edit-question/edit-question.component.scss
+++ b/front-end/src/app/quizzes/edit-question/edit-question.component.scss
@@ -20,11 +20,17 @@ h2 {
     display: inline-block;
 }
 
-/*i {
-    width: 250px;
-    text-align: center;;
-}
-*/
+.answer-list {  
+    text-align: center;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    overflow:auto; 
+    height: 400px; 
+    width: 75%; 
+    border: 1px solid #AAAAAA
+  }
+    
 
 .question{
     max-height: 500px;
@@ -38,7 +44,8 @@ h2 {
 }
 
 .label {
-    margin-top: 1em;
+    padding-top: 5%;
+    text-align: center;
 }
 
 #chargerImage {
@@ -52,3 +59,6 @@ h2 {
     margin-top: 1em;
 }
 
+.imageAndText{
+    display: flex;
+}
